alignment fixed

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -20,7 +20,7 @@
   form {
     display: flex;
     flex-direction: column;
-    width: 35%;
+    width: 40%;
     margin: 0 auto;
     padding: 2rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -66,7 +66,7 @@
   }
   
   img {
-    width: 175px;
+    width: 500px;
     align-self: center;
   }
 
